# rst-pypi-ref

./: .gitignore  .pre-commit-config.yaml  CHANGES.rst  CONTRIBUTING.rst  README.rst  pyproject.toml  setup.cfg
.github/workflows/: main.yml  release.yml
rst_pypi_ref/: __init__.py  cli.py  core.py  sphinx.py
tests/: test_it.py  test_sphinx.py
tests/roots/test-default/: conf.py  index.rst
