[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rst-pypi-ref"
authors = [{name = "Kazuya Takei", email = "myself@attakei.net"}]
license = {file = "LICENSE"}
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: reStructuredText",
]
dependencies = [
    "docutils",
]
dynamic = ["version", "description"]
requires-python = ">= 3.9"

[project.optional-dependencies]
# Extras
sphinx = [
    "sphinx",
]

[project.urls]
Home = "https://github.com/attakei-lab/rst-pypi-ref"
Repository = "https://github.com/attakei-lab/rst-pypi-ref"

[tool.ruff.lint]
select = ["C90", "D", "E", "F", "I", "W"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D107", "D200", "D203", "D213", "D400"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.rye]
managed = true
dev-dependencies = [
    "pygments>=2.17.2",
    "pytest~=7.2.0",
]

[tool.flit.module]
name = "rst_pypi_ref"
